# audio_game_web

./: .gitignore  CMakeLists.txt  README.md  _headers  _probeA.html  build.bat  build.sh  index.html  serve.py
assets/: scene.txt.old-40x40.bak
assets/audio/: README.txt
engine/: CMakeLists.txt  VENDORED_FROM.md
engine/docs/: CODEBASE_DEEP_DIVE.md
engine/include/xyzpan/: Constants.h  DistancePipeline.h  Engine.h  SwarmMode.h  Types.h
engine/include/xyzpan/dsp/: LFO.h  OLAPitchShifter.h
engine/src/: BinauralPipeline.cpp  DistancePipeline.cpp  ERPipeline.cpp  Engine.cpp  LFO.cpp  SwarmMode.cpp
game/: CMakeLists.txt
game/src/: AudioDevice.cpp  AudioDevice.h  AudioWorld.cpp  AudioWorld.h  DevMode.cpp  DevMode.h  EngineTuning.cpp  EngineTuning.h  GLLoader.cpp  GLLoader.h  Occlusion.cpp  Occlusion.h  ParamBuffer.h  Player.cpp  Player.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneIO.cpp  SceneIO.h  SliceGame.cpp  SliceGame.h  SoundDirector.cpp  SoundDirector.h  SoundLibrary.cpp  SoundLibrary.h  Sounds.cpp  Sounds.h  Source.cpp  Source.h  Stalker.cpp  Stalker.h  Tunables.cpp  Tunables.h  main.cpp
js/: main.js
src/: WebAudioDevice.cpp  WebAudioDevice.h  WebGLLoader.cpp  asset_bridge.cpp  input_bridge.cpp  input_bridge.h  pthread_stubs.c  sdl_keys_compat.h  web_bridge.h  web_main.cpp
src/sdl_stub/SDL3/: SDL.h
